== 0.0.3 2010-04-23

 * Fix #render calls which don't render templates (e.g. :text => '').

== 0.0.2 2010-04-21

 * Thin support.

== 0.0.1 2010-04-13

 * Hi.